--- a/web/view/statistic/orderHistory.html
+++ b/web/view/statistic/orderHistory.html
@@ -19,6 +19,12 @@
     <div class="wrapper">
         \{include file="../common/header.html"\} \{include file="../common/menu.html"\}
         <div class="content-wrapper">
+            \{if $msg == 'failure'\}
+            <div class="alert alert-warning alert-dismissable text-center">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                <h4 style="display: inline;">\{$error\}</h4>
+            </div>
+            \{/if\}
             <section class="content-header">
                 <h1>消費紀錄列表</h1>
             </section>
@@ -77,36 +83,18 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        \{foreach from=$orderHistory item=order\}
                                         <tr>
-                                            <td>5</td>
-                                            <td>老王</td>
-                                            <td>男</td>
+                                            <td>\{$order.score\}</td>
+                                            <td>\{$order.userName\}</td>
+                                            <td>\{$fieldMap[$order.gender]\}</td>
                                             <td>隱形眼鏡 A</td>
-                                            <td>12</td>
-                                            <td>隱形眼鏡</td>
-                                            <td>10</td>
-                                            <td>已結清尾款</td>
+                                            <td>\{$order.itemNum\}</td>
+                                            <td>\{$fieldMap[$order.actionState + 2]\}</td>
+                                            <td>\{$order.point\}</td>
+                                            <td>\{$fieldMap[$order.checkState + 5]\}</td>
                                         </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>老李</td>
-                                            <td>女</td>
-                                            <td>隱形眼鏡 A</td>
-                                            <td>6</td>
-                                            <td>隱形眼鏡</td>
-                                            <td>5</td>
-                                            <td>未付任何金錢</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>老陳</td>
-                                            <td>男</td>
-                                            <td>粗框眼鏡 A</td>
-                                            <td>1</td>
-                                            <td>粗框眼鏡</td>
-                                            <td>20</td>
-                                            <td>已付訂金</td>
-                                        </tr>
+                                        \{/foreach\}
                                     </tbody>
                                 </table>
                             </div>
@@ -169,28 +157,12 @@
 
         function getQueryResult() {
             $.get(
-                'url',
+                'controller/statisticController.php',
                 {
                     startDate: startDate,
                     endDate: endDate,
-                },
-                function (data) {
-                    $('#' + type + 'Table').DataTable().clear().draw();
-                    if (data.length != 0) {
-                        data.forEach(function (record, index) {
-                            $('#' + type + 'Table').DataTable().row.add([
-                                record.dispatchDate,
-                                record.total,
-                                record.normal,
-                                record.prob + '%'
-                            ]).draw(false);
-                        });
-                        $('#errDiv').css('display', 'none');
-                    } else {
-                        $('#errDiv').css('display', 'block');
-                    }
-                },
-                'json'
+                    action: 'getQueryResult'
+                }
             ).fail(function () {
                 alert("抱歉! 伺服器無法接受您的查詢!");
             });
