Add check field validation

--- a/web/view/brand/brandAdd.html
+++ b/web/view/brand/brandAdd.html
@@ -77,7 +77,7 @@
                                 <h3 class="box-title">新增品牌</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/brandController.php" onsubmit="formValidation()">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/brandController.php">
                                 <div class="box-body">
                                     <div id="brandNameDiv" class="form-group">
                                         <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
