--- a/web/view/glass/glassAdd.html
+++ b/web/view/glass/glassAdd.html
@@ -49,7 +49,7 @@
                                 <h3 class="box-title">新增鏡片</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/glassController.php" onsubmit="formValidation()">
+                            <form class="form-horizontal" method="post" action="../controller/glassController.php" onsubmit="formValidation()">
                                 <div class="box-body">
                                     <div id="glassNameDiv" class="form-group">
                                         <label for="glassName" class="col-sm-2 control-label">鏡片名稱</label>
