Set default brand of len and glass

--- a/web/view/len/lenAdd.html
+++ b/web/view/len/lenAdd.html
@@ -61,7 +61,7 @@
                                         <div class="col-sm-6">
                                             <select class="selectpicker" name="lenBrand" id="lenBrand" data-live-search="true" title="請選擇品牌">
                                                 \{foreach from=$brandData item=brand \}
-                                                <option value='\{$brand.brandId\}'>\{$brand.brandName\}</option>
+                                                <option value='\{$brand.brandId\}' selected>\{$brand.brandName\}</option>
                                                 \{/foreach\}
                                             </select>
                                         </div>
