--- a/web/view/glass/glassAdd.html
+++ b/web/view/glass/glassAdd.html
@@ -68,7 +68,7 @@
                                         <div class="col-sm-6">
                                             <select class="selectpicker" name="glassBrand" id="glassBrand" data-live-search="true" title="請選擇品牌">
                                                 \{foreach from=$brandData item=brand \}
-                                                <option value='\{$brand.brandId\}'>\{$brand.brandName\}</option>
+                                                <option value='\{$brand.brandId\}' selected>\{$brand.brandName\}</option>
                                                 \{/foreach\}
                                             </select>
                                         </div>
