--- a/web/view/part/partAdd.html
+++ b/web/view/part/partAdd.html
@@ -20,6 +20,8 @@
             $("#partImage1").change(function() {
                 readURL(this, '#partImg1');
             });
+
+            $('input[name="imgCount"]').val(imgCount);
         });
 
         function readURL(input, id) {
@@ -54,7 +56,8 @@
             $("#partImage"+ i).change(function() {
                 readURL(this, "#partImg"+ i);
             });
-            
+
+            $('input[name="imgCount"]').val(imgCount);
         }
 
         function deletePartImg(i){
@@ -86,7 +89,7 @@
                                 <h3 class="box-title">新增零件</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/productController.php">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/partController.php">
                                 <div class="box-body">
                                     <div id="partNameDiv" class="form-group">
                                         <label for="partName" class="col-sm-2 control-label">零件名稱</label>
@@ -126,13 +129,14 @@
                                             <div id="addImgStart" name="addImgStart"></div>
                                         </div>
                                     </div>
-                                    <div id="isLaunceDiv" class="form-group">
-                                        <label for="isLaunce" class="col-sm-2 control-label">上架到網路上</label>
-                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini">
+                                    <div id="isLaunchDiv" class="form-group">
+                                        <label for="isLaunch" class="col-sm-2 control-label">上架到網路上</label>
+                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini" name="isLaunch" value=1>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
                                     <a href="../controller/partController.php?action=partAddPrepare" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="imgCount">
                                     <input type="hidden" name="action" value="partAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
