Edit prepare page of frame and part

--- a/web/view/frame/frameAdd.html
+++ b/web/view/frame/frameAdd.html
@@ -135,8 +135,8 @@
                                             <input id="material" name="material" class="form-control" placeholder="輸入鏡框材質">
                                         </div>
                                     </div>
-                                    <div id="frameColorDiv" class="form-group">
-                                        <label for="frameColor" class="col-sm-2 control-label">鏡框顏色</label>
+                                    <div id="colorDiv" class="form-group">
+                                        <label for="color" class="col-sm-2 control-label">鏡框顏色</label>
                                         <div class="col-sm-6">
                                             <input id="color" name="color" class="form-control" placeholder="輸入鏡框顏色">
                                         </div>
