--- a/web/view/part/partEdit.html
+++ b/web/view/part/partEdit.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../plugins/bootstrap-toggle/css/bootstrap2-toggle.css"/>
     <script>
         $(document).ready(function() {
+            $('select[name=partType]').val('\{$partData.type\}');
+            $('select[name=partType]').selectpicker('refresh');
+               
             $("#partImage").filestyle({
                 size: "nr",
                 input: false,
@@ -82,7 +85,7 @@
                                     <div id="partNameDiv" class="form-group">
                                         <label for="partName" class="col-sm-2 control-label">零件名稱</label>
                                         <div class="col-sm-10">
-                                            <input id="partName" name="partName" class="form-control" value="\{$partData.partName\}">
+                                            <input id="partName" name="partName" class="form-control" placeholder="輸入零件名稱" value="\{$partData.partName\}">
                                         </div>
                                     </div>
                                     <div id="partTypeDiv" class="form-group">
@@ -101,11 +104,11 @@
                                     <div id="partSizeDiv" class="form-group">
                                         <label for="partSize" class="col-sm-2 control-label">零件大小</label>
                                         <div class="col-sm-6">
-                                            <input id="partSize" name="partSize" class="form-control" placeholder="輸入零件大小">
+                                            <input id="partSize" name="partSize" class="form-control" placeholder="輸入零件大小" value="\{$partData.size\}">
                                         </div>
                                     </div>
                                     <div id="partImageDiv" class="form-group">
-                                        <label class="col-sm-2 control-label">品牌圖片</label>
+                                        <label class="col-sm-2 control-label">零件圖片</label>
                                         <div class="col-sm-10">
                                             <div class = "form-inline" style="display:inline-block;">
                                                 <input type="file" id="partImage" name="partImage" data-input="false" accept="image/*" style="display: inline;">
@@ -114,13 +117,17 @@
                                                 </a> 
                                                 \{/if\}
                                             </div> 
-                                            <img id="partImg" class="img-thumbnail" src="\{$partData.path\}" alt="尚未上傳圖片">
+                                            <img id="partImg" class="img-thumbnail" src="" alt="尚未上傳圖片">
                                             
                                         </div>
                                     </div>
-                                    <div id="isLaunceDiv" class="form-group">
-                                        <label for="isLaunce" class="col-sm-2 control-label">上架到網路上</label>
-                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini">
+                                    <div id="isLaunchDiv" class="form-group">
+                                        <label for="isLaunch" class="col-sm-2 control-label">上架到網路上</label>
+                                        \{if $partData.isLaunch == 1\}
+                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini" name="isLaunch" value=1>
+                                        \{else \}
+                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" data-toggle="toggle" data-size="mini" name="isLaunch" value=1>
+                                        \{/if\}
                                     </div>
                                 </div>
                                 <!-- /.box-body -->
@@ -141,7 +148,6 @@
         </div>
         \{include file="../common/footer.html"\}
     </div>
-    <script src="../javascript/userEdit.js"></script>
 </body>
 
 </html>
