--- a/web/view/education/educationList.html
+++ b/web/view/education/educationList.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     \{include file="../common/resource.html"\}
-
+    <!-- DataTables -->
+    <link rel="stylesheet" href="../plugins/datatables/dataTables.bootstrap.css">
+    <script src="../plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="../plugins/datatables/dataTables.bootstrap.min.js"></script>
     <script>
-        function deleteEducation(articleId){
+    $(function() {
+        $('#educationListTable').DataTable({
+            "columnDefs": [
+                { "orderable": false, "targets": 4 }
+            ],
+            "paging": false,
+            "lengthChange": false,
+            "searching": false,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false
+        });
+    });
+
+    function deleteEducation(articleId) {
         BootstrapDialog.show({
-            title:'提醒',
+            title: '提醒',
             message: '確定刪除嗎? 文章刪除後將無法回復。',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
-                action: function(){
-                    location='../controller/educationController.php?action=educationDelete&educationId='+ articleId;
+                action: function() {
+                    location = '../controller/educationController.php?action=educationDelete&educationId=' + articleId;
                 }
-            },{
+            }, {
                 label: '取消',
-                action: function(dialogItself){
+                action: function(dialogItself) {
                     dialogItself.close();
                 }
             }]
@@ -27,8 +45,7 @@
 
 <body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
-        \{include file="../common/header.html"\}
-        \{include file="../common/menu.html"\}
+        \{include file="../common/header.html"\} \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
                 <h1>衛教文章檢視修改</h1>
@@ -42,8 +59,7 @@
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                             <h4 style="display: inline;">\{$error\}</h4>
                         </div>
-                        \{/if\}
-                        \{if $msg != ''\}
+                        \{/if\} \{if $msg != ''\}
                         <div class="alert alert-success alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                             <h4 style="display: inline;">\{$msg\}</h4>
@@ -54,11 +70,12 @@
                                 <h3 class="box-title">文章列表</h3>
                             </div>
                             <div class="box-body">
-                                <table class="table table-striped">
+                                <table class="table table-striped" id="educationListTable">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
                                             <th>文章標題</th>
                                             <th>點擊次數</th>
+                                            <th>建立時間</th>
                                             <th>最後更新時間</th>
                                             <th>操作選項</th>
                                         </tr>
@@ -68,9 +85,10 @@
                                         <tr>
                                             <td>\{$article.title\}</td>
                                             <td>\{$article.ctr\}</td>
+                                            <td>\{$article.createTime\}</td>
                                             <td>\{$article.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="../controller/educationController.php?action=educationEdit&articleId=\{$article.articleId\})">
+                                                <a href="../controller/educationController.php?action=educationEditPrepare&educationId=\{$article.articleId\}">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
                                                 </a>&nbsp;
                                                 <a href="#">
