--- a/web/view/news/newsList.html
+++ b/web/view/news/newsList.html
@@ -3,7 +3,25 @@
 
 <head>
     \{include file="../common/resource.html"\}
+    <!-- DataTables -->
+    <link rel="stylesheet" href="../plugins/datatables/dataTables.bootstrap.css">
+    <script src="../plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="../plugins/datatables/dataTables.bootstrap.min.js"></script>
     <script>
+    $(function() {
+        $('#newsListTable').DataTable({
+            "columnDefs": [
+                { "orderable": false, "targets": 4 }
+            ],
+            "paging": false,
+            "lengthChange": false,
+            "searching": false,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false
+        });
+    });
+
     function deleteNews(articleId) {
         BootstrapDialog.show({
             title: '提醒',
@@ -52,11 +70,12 @@
                                 <h3 class="box-title">文章列表</h3>
                             </div>
                             <div class="box-body">
-                                <table class="table table-striped">
+                                <table class="table table-striped" id="newsListTable">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
                                             <th>文章標題</th>
                                             <th>點擊次數</th>
+                                            <th>建立時間</th>
                                             <th>最後更新時間</th>
                                             <th>操作選項</th>
                                         </tr>
@@ -66,9 +85,10 @@
                                         <tr>
                                             <td>\{$article.title\}</td>
                                             <td>\{$article.ctr\}</td>
+                                            <td>\{$article.createTime\}</td>
                                             <td>\{$article.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="../controller/newsController.php?action=newsEdit&newsId=\{$article.articleId\})">
+                                                <a href="../controller/newsController.php?action=newsEditPrepare&newsId=\{$article.articleId\}">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
                                                 </a>&nbsp;
                                                 <a href="#">
