--- a/web/view/store/storeList.html
+++ b/web/view/store/storeList.html
@@ -3,20 +3,38 @@
 
 <head>
     \{include file="../common/resource.html"\}
+    <!-- DataTables -->
+    <link rel="stylesheet" href="../plugins/datatables/dataTables.bootstrap.css">
+    <script src="../plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="../plugins/datatables/dataTables.bootstrap.min.js"></script>
     <script>
-        function deleteStore(storeId){
+    $(function() {
+        $('#storeListTable').DataTable({
+            "columnDefs": [
+                { "orderable": false, "targets": 7 }
+            ],
+            "paging": false,
+            "lengthChange": false,
+            "searching": false,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false
+        });
+    });
+
+    function deleteStore(storeId) {
         BootstrapDialog.show({
-            title:'提醒',
+            title: '提醒',
             message: '確定刪除嗎? 店家資訊刪除後將無法回復。',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
-                action: function(){
-                    location='../controller/storeController.php?action=storeDelete&storeId='+ storeId;
+                action: function() {
+                    location = '../controller/storeController.php?action=storeDelete&storeId=' + storeId;
                 }
-            },{
+            }, {
                 label: '取消',
-                action: function(dialogItself){
+                action: function(dialogItself) {
                     dialogItself.close();
                 }
             }]
@@ -27,8 +45,7 @@
 
 <body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
-        \{include file="../common/header.html"\}
-        \{include file="../common/menu.html"\}
+        \{include file="../common/header.html"\} \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
                 <h1>店家資訊檢視修改</h1>
@@ -42,8 +59,7 @@
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                             <h4 style="display: inline;">\{$error\}</h4>
                         </div>
-                        \{/if\}
-                        \{if $msg != ''\}
+                        \{/if\} \{if $msg != ''\}
                         <div class="alert alert-success alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                             <h4 style="display: inline;">\{$msg\}</h4>
@@ -54,7 +70,7 @@
                                 <h3 class="box-title">店家列表</h3>
                             </div>
                             <div class="box-body">
-                                <table class="table table-striped">
+                                <table class="table table-striped" id="storeListTable">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
                                             <th>店家名稱</th>
@@ -62,7 +78,7 @@
                                             <th>電話</th>
                                             <th>營業時間</th>
                                             <th>額外說明</th>
-                                            <th>最後更新時間</th>
+                                            <th>建立時間</th>
                                             <th>最後更新時間</th>
                                             <th>操作選項</th>
                                         </tr>
@@ -78,7 +94,7 @@
                                             <td>\{$store.createTime\}</td>
                                             <td>\{$store.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="../controller/storeController.php?action=storeEdit&storeId=\{$store.storeId\})">
+                                                <a href="../controller/storeController.php?action=storeEditPrepare&storeId=\{$store.storeId\}">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
                                                 </a>&nbsp;
                                                 <a href="#">
