Modify table col width

--- a/web/view/frame/frameList.html
+++ b/web/view/frame/frameList.html
@@ -70,15 +70,15 @@
                                 <table class="table table-striped" id="frameListTable">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
-                                            <th>鏡框名稱</th>
-                                            <th>鏡框型號</th>                                            
-                                            <th>鏡框品牌</th>                                            
-                                            <th>鏡框框形</th>                                            
-                                            <th>鏡框材質</th>                                            
-                                            <th>鏡框顏色</th>                         
-                                            <th>是否上架到網路上</th>
-                                            <th>最後更新時間</th>
-                                            <th>操作選項</th>
+                                            <th class="col-xs-1">鏡框名稱</th>
+                                            <th class="col-xs-1">鏡框型號</th>                                            
+                                            <th class="col-xs-1">鏡框品牌</th>                                            
+                                            <th class="col-xs-1">鏡框框形</th>                                            
+                                            <th class="col-xs-1">鏡框材質</th>                                            
+                                            <th class="col-xs-1">鏡框顏色</th>                         
+                                            <th class="col-xs-1">是否上架到網路上</th>
+                                            <th class="col-xs-2">最後更新時間</th>
+                                            <th class="col-xs-1">操作選項</th>
                                         </tr>
                                     </thead>
                                     <tbody>
