--- a/web/view/frame/frameAdd.html
+++ b/web/view/frame/frameAdd.html
@@ -80,7 +80,7 @@
             </section>
             <section class="content">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-10">
                         \{if $error != ''\}
                         <div class="alert alert-warning alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -141,6 +141,18 @@
                                             <input id="color" name="color" class="form-control" placeholder="輸入鏡框顏色">
                                         </div>
                                     </div>
+                                    <div id="priceDiv" class="form-group">
+                                        <label for="price" class="col-sm-2 control-label">價格</label>
+                                        <div class="col-sm-6">
+                                            <input type="number" min=0 id="price" name="price" class="form-control" placeholder="輸入價格">
+                                        </div>
+                                    </div>
+                                    <div id="discountPriceDiv" class="form-group">
+                                        <label for="discountPrice" class="col-sm-2 control-label">會員價</label>
+                                        <div class="col-sm-6">
+                                            <input id="discountPrice" type="number" min=0 name="discountPrice" class="form-control" placeholder="輸入會員價">
+                                        </div>
+                                    </div>
                                     <div id="frameStyleDiv" class="form-group">
                                         <label for="frameStyle" class="col-sm-2 control-label">鏡框所屬風格</label>
                                         <div class="col-sm-6">
@@ -154,20 +166,22 @@
                                     <div id="frameImageDiv" class="form-group">
                                         <label class="col-sm-2 control-label">鏡框圖片</label>
                                         <div class="col-sm-10" >
-                                            <div id="image1">
                                             <div class = "form-inline" style="display:inline-block;">
                                                 <input type="file" id="frameImage1" name="frameImage1" data-input="false" accept="image/*">
                                                 <a class="btn btn-sm btn-primary" onclick="addFrameImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
                                             </div>
                                             <img id="frameImg1" class="img-thumbnail" style="display:none"><br>
-                                            </div>
                                             <div id="addImgStart" name="addImgStart"></div>
                                         </div>
                                         
                                     </div>
                                     <div id="isLaunchDiv" class="form-group">
                                         <label for="isLaunch" class="col-sm-2 control-label">上架到網路上</label>
-                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini" name="isLaunch" value=1>
+                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini" name="isLaunch" value=1 >
+                                    </div>
+                                    <div id="isPrimaryDiv" class="form-group">
+                                        <label for="isPrimary" class="col-sm-2 control-label">主打商品</label>
+                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini" name="isPrimary" value=1 >
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
